--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/background_blanco"
     tools:context=".MainActivity">
 
+    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
+
+        <RelativeLayout
+            android:id="@+id/contenedor"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
 
+            <LinearLayout
+                android:id="@+id/contenedorHeader"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_contenedor_head"
+                android:layout_weight="10"
+                android:paddingHorizontal="@dimen/activity_horizontal_margin"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-</android.support.constraint.ConstraintLayout>
+
+                <ImageButton
+                    android:id="@+id/imgAbrirMenu"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="2"
+                    android:background="@android:color/transparent"
+                    android:src="@mipmap/icon_menu" />
+
+                <ImageView
+                    android:id="@+id/ivNameViewPager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:paddingRight="30dp"
+                    android:layout_weight="8" />
+
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <FrameLayout
+            android:id="@+id/main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="80dp"/>
+
+        <ListView
+            android:id="@+id/drawer"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:alpha="0.8"
+            android:background="@drawable/bg_nav_drawer"
+            android:choiceMode="singleChoice"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp" />
+
+    </android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
