--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,19 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_ontenedor_margin">20dp</dimen>
+    <!--Size general View -->
+    <dimen name="size_BottomNavigationView">50dp</dimen>
+    <dimen name="size_editext">50dp</dimen>
+    <dimen name="size_progress">40dp</dimen>
+    <dimen name="size_text">18sp</dimen>
+    <dimen name="height_button">50dp</dimen>
+    <dimen name="height_spinner">60dp</dimen>
+    <dimen name="size_text_button">18sp</dimen>
+
+    <dimen name="height_contenedor_head">80dp</dimen>
+
+    <dimen name="size_selecion_spinner">48dp</dimen>
+    <dimen name="size_text_spinner">18sp</dimen>
+
 </resources>
