view select rutas desing app pdf

--- a/app/src/main/res/drawable/bg_button_main_enable.xml
+++ b/app/src/main/res/drawable/bg_button_main_enable.xml
@@ -4,9 +4,9 @@
 
     <gradient
         android:angle="135"
-        android:centerColor="@color/colorGray"
-        android:endColor="@color/colorLightGray"
-        android:startColor="@color/md_grey_500"
+        android:centerColor="@color/transparent_grey"
+        android:endColor="@color/colorGray"
+        android:startColor="@color/transparent_grey"
         android:type="linear"/>
 
     <corners
