--- a/app/src/main/res/drawable/bg_button_count.xml
+++ b/app/src/main/res/drawable/bg_button_count.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-   <gradient
+    <gradient
         android:angle="180"
         android:centerColor="@color/transparent_blue"
         android:endColor="@color/colorLightBlue"
@@ -10,16 +10,15 @@
         android:type="linear"/>
 
     <corners
-        android:topLeftRadius="15dip"
-        android:topRightRadius="15dip"
-        android:bottomLeftRadius="15dip"
-        android:bottomRightRadius="15dip"/>
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dip"
+        android:bottomLeftRadius="5dip"
+        android:bottomRightRadius="5dip"/>
 
     <padding
         android:bottom="0dip"
         android:left="0dip"
         android:right="0dip"
         android:top="0dip" />
-
 
 </shape>
