--- a/app/src/main/res/layout/custom_spinner_placa.xml
+++ b/app/src/main/res/layout/custom_spinner_placa.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="5dp">
 
 
     <ImageView
@@ -12,7 +13,7 @@
         android:paddingLeft="10dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:src="@mipmap/icon_lupa" />
 
     <TextView
