--- a/app/src/main/res/layout/menu_perfil.xml
+++ b/app/src/main/res/layout/menu_perfil.xml
@@ -3,8 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/activity_horizontal_margin"
     tools:context=".Menu.Perfil">
 
+
+    <Button
+        android:id="@+id/btnCerrarSession"
+        style="@style/ButtonCustomEnable"
+        android:text="Cerrar Sessión"
+        android:layout_alignParentBottom="true"/>
 
 
 </RelativeLayout>
