--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,7 +14,11 @@
 
     <dimen name="height_contenedor_head">80dp</dimen>
 
-    <dimen name="size_selecion_spinner">48dp</dimen>
+    <dimen name="size_selecion_spinner">40dp</dimen>
     <dimen name="size_text_spinner">18sp</dimen>
+    <dimen name="margin_horizontal_spinner">20dp</dimen>
+    <dimen name="text_size_price">24sp</dimen>
+    <dimen name="text_size_count">32sp</dimen>
+    <dimen name="text_size_button_count">20sp</dimen>
 
 </resources>
