--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,7 +58,6 @@
         <item name="android:layout_height">@dimen/height_button</item>
         <item name="android:background">@drawable/bg_button_main_enable</item>
         <item name="android:gravity">center</item>
-        <item name="android:alpha">0.7</item>
         <item name="android:textColor">@color/md_white_1000</item>
         <item name="android:textSize">@dimen/size_text_button</item>
         <item name="android:fontFamily">@font/font</item>
@@ -68,8 +67,7 @@
 
     <style name="SpnnerCustom" parent="Theme.AppCompat.Light">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/height_spinner</item>
-        <item name="android:layout_marginHorizontal">25dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/bg_spinner_main</item>
         <item name="android:popupBackground">@drawable/bg_spinner_dropdow_main</item>
     </style>
