Se crea la funcionalidad de dibujar asientos en el bus
Se crea el mapa de asientos del bus, de acuerdo a las columnas y filas que tiene. Se valida que sólo se seleccionen los puestos necesarios, y se muestran en distinto color los asientos disponibles, ocupados y seleccionados

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -64,6 +64,18 @@
         <item name="android:padding">5dp</item>
     </style>
 
+    <style name="ButtonCustomPrimary" parent="Theme.AppCompat.Light">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/height_button</item>
+        <item name="android:background">@drawable/bg_blue</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/md_white_1000</item>
+        <item name="android:textSize">@dimen/size_text_button</item>
+        <item name="android:fontFamily">@font/font</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
     <style name="SpnnerCustom" parent="Theme.AppCompat.Light">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
