--- a/app/src/main/res/layout/activity_select_rutas.xml
+++ b/app/src/main/res/layout/activity_select_rutas.xml
@@ -23,6 +23,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="5dp"
             android:layout_weight="2"
+            android:onClick="goBack"
             android:background="@android:color/transparent"
             android:src="@mipmap/icon_back" />
 
