--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,12 +43,16 @@
 
                 <ImageView
                     android:id="@+id/ivNameViewPager"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
                     android:layout_marginTop="5dp"
-                    android:paddingRight="30dp"
-                    android:layout_weight="8" />
+                    android:scaleType="centerCrop"
+                    android:layout_weight="6" />
 
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"/>
 
             </LinearLayout>
 
