--- a/app/src/main/res/layout/activity_select_rutas.xml
+++ b/app/src/main/res/layout/activity_select_rutas.xml
@@ -29,12 +29,16 @@
 
         <ImageView
             android:id="@+id/ivNameViewPager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
             android:layout_marginTop="5dp"
-            android:paddingRight="30dp"
-            android:layout_weight="8"
+            android:layout_weight="6"
             android:src="@mipmap/header_tickets"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"/>
 
 
     </LinearLayout>
