Funcionalidad de sincronización remota
Se ha realizado la funcionalidad de la sincronización remota, esto se hace para la tabla tickets y la tabla sillas. Donde insertamos cada ticket y las sillas asociadas a él, y devolvemos el id_remoto para guardarlo en la base de datos local.

--- a/app/src/main/res/layout/menu_inicio.xml
+++ b/app/src/main/res/layout/menu_inicio.xml
@@ -25,6 +25,31 @@
 
         </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/btnNameUsuario"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnTest"
+            style="@style/ButtonCustom"
+            android:layout_weight="1"
+            android:text="Guardar"
+            android:layout_above="@id/btnNameUsuario"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+
+        <Button
+            android:id="@+id/btnSend"
+            style="@style/ButtonCustom"
+            android:layout_weight="1"
+            android:text="Enviar"
+            android:layout_above="@id/btnNameUsuario"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/btnNameUsuario"
         style="@style/ButtonCustom"
