--- a/app/src/main/res/layout/menu_ticket.xml
+++ b/app/src/main/res/layout/menu_ticket.xml
@@ -27,6 +27,12 @@
         android:layout_marginHorizontal="@dimen/margin_horizontal_spinner"
         android:layout_below="@+id/spRutas"/>
 
+    <Button
+        android:id="@+id/btnRecordarRuta"
+        style="@style/ButtonCustomEnable"
+        android:text="Recordar ruta"
+        android:layout_above="@+id/btnNext"
+        android:layout_marginBottom="10dp"/>
 
     <Button
         android:id="@+id/btnNext"
