--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -92,4 +92,17 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/md_white_1000</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:background">@color/colorBlue</item>
+        <item name="android:textColor">@color/md_blue_900</item>
+        <item name="android:textColorPrimary">@color/md_white_1000</item>
+        <item name="android:windowTitleStyle">@style/WindowTitleStyle</item>
+    </style>
+
+    <style name="WindowTitleStyle"
+        parent="TextAppearance.AppCompat.Title">
+        <item name="android:textColor">@color/md_white_1000</item>
+    </style>
 </resources>
