--- a/app/src/main/res/layout/menu_ticket.xml
+++ b/app/src/main/res/layout/menu_ticket.xml
@@ -27,18 +27,36 @@
         android:layout_marginHorizontal="@dimen/margin_horizontal_spinner"
         android:layout_below="@+id/spRutas"/>
 
-    <Button
-        android:id="@+id/btnRecordarRuta"
-        style="@style/ButtonCustomEnable"
-        android:text="Recordar ruta"
-        android:layout_above="@+id/btnNext"
-        android:layout_marginBottom="10dp"/>
+    <LinearLayout
+        android:id="@+id/contentButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="10"
+        android:layout_above="@+id/btnNext">
+
+        <Button
+            android:id="@+id/btnRecordarRuta"
+            style="@style/ButtonCustomEnable"
+            android:layout_weight="5"
+            android:text="Recordar ruta"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="10dp"/>
+
+        <Button
+            android:id="@+id/btnFinalizarRuta"
+            style="@style/ButtonCustomEnable"
+            android:layout_weight="5"
+            android:text="Finalizar ruta"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="10dp"/>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnNext"
-        style="@style/ButtonCustomEnable"
+        style="@style/ButtonCustom"
         android:text="Siguiente"
         android:layout_alignParentBottom="true"/>
-
 
 </RelativeLayout>
