--- a/app/src/main/res/layout/menu_ticket.xml
+++ b/app/src/main/res/layout/menu_ticket.xml
@@ -53,6 +53,16 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/login_progress"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
+
     <Button
         android:id="@+id/btnNext"
         style="@style/ButtonCustom"
