--- a/app/src/main/res/layout/activity_precio_rutas_conductor.xml
+++ b/app/src/main/res/layout/activity_precio_rutas_conductor.xml
@@ -69,6 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/header_precios"
+        android:layout_above="@+id/btn_olvidar_ruta"
         android:paddingHorizontal="@dimen/activity_horizontal_margin">
 
         <android.support.v7.widget.RecyclerView
@@ -83,9 +84,18 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:layout_above="@+id/btn_olvidar_ruta"/>
+
+    <Button
+        android:id="@+id/btn_olvidar_ruta"
+        style="@style/ButtonCustom"
+        android:text="Olvidar ruta"
+        android:visibility="visible"
+        android:layout_marginTop="25dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/activity_vertical_margin"/>
 
 </RelativeLayout>
