--- a/app/src/main/res/layout/menu_inicio.xml
+++ b/app/src/main/res/layout/menu_inicio.xml
@@ -30,15 +30,29 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/btnNameUsuario"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_tickets_to_sync"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No hay Tickets por sincronizar"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
         <Button
-            android:id="@+id/btnSend"
+            android:id="@+id/btnSync"
             style="@style/ButtonCustom"
+            android:visibility="gone"
             android:layout_weight="1"
-            android:text="Enviar"
-            android:layout_above="@id/btnNameUsuario"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+            android:text="Sincronizar" />
+
+        <ProgressBar
+            android:id="@+id/progresBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
