--- a/app/src/main/res/layout/activity_select_tarifa.xml
+++ b/app/src/main/res/layout/activity_select_tarifa.xml
@@ -27,6 +27,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="5dp"
                 android:layout_weight="2"
+                android:onClick="goBack"
                 android:background="@android:color/transparent"
                 android:src="@mipmap/icon_back" />
 
