--- a/app/src/main/res/layout/adapter_price_pasaje.xml
+++ b/app/src/main/res/layout/adapter_price_pasaje.xml
@@ -7,12 +7,13 @@
     <TextView
         android:id="@+id/tvPrecioPasaje"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="5dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:paddingVertical="15dp"
         android:background="@drawable/bg_blue"
         android:gravity="center"
         android:text="0"
         android:textColor="@android:color/white"
-        android:textSize="20sp" />
+        android:textSize="25sp" />
 
 </LinearLayout>
