--- a/app/src/main/res/layout/activity_precio_rutas_conductor.xml
+++ b/app/src/main/res/layout/activity_precio_rutas_conductor.xml
@@ -72,7 +72,7 @@
         android:layout_above="@+id/btn_olvidar_ruta"
         android:paddingHorizontal="@dimen/activity_horizontal_margin">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_precios"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
