--- a/app/src/main/res/layout/activity_select_sillas.xml
+++ b/app/src/main/res/layout/activity_select_sillas.xml
@@ -139,7 +139,7 @@
             </LinearLayout>
 
             <!-- Mapa de la sala -->
-            <android.support.v4.widget.NestedScrollView
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="vertical">
@@ -217,7 +217,7 @@
 
                 </LinearLayout>
 
-            </android.support.v4.widget.NestedScrollView>
+            </androidx.core.widget.NestedScrollView>
 
         </LinearLayout>
 
