--- a/app/src/main/res/layout/activity_select_tarifa.xml
+++ b/app/src/main/res/layout/activity_select_tarifa.xml
@@ -80,7 +80,7 @@
             android:layout_height="0dp"
             android:layout_weight="7.5">
 
-            <android.support.v7.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_tarifas"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
