--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -20,10 +20,21 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@mipmap/logo"
-                android:layout_centerInParent="true"/>
+                android:layout_centerInParent="true"
+                android:src="@mipmap/logo" />
 
         </RelativeLayout>
+
+        <TextSwitcher
+            android:id="@+id/tvInformation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/md_white_1000"
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            android:inAnimation="@android:anim/slide_in_left"
+            android:outAnimation="@android:anim/slide_out_right"
+            tools:text="Cargando datos"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
