--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -45,8 +45,9 @@
                 android:id="@+id/progresBar"
                 android:layout_width="@dimen/size_progress"
                 android:layout_height="@dimen/size_progress"
-                android:indeterminateTint="@color/md_white_1000"
-                android:layout_centerInParent="true" />
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:indeterminateTint="@color/md_white_1000" />
 
         </RelativeLayout>
 
