Update Inicio and Perfil to Kotlin and Cancel button is enable
Refactor Inicio and Perfil using Kotlin and the button on SplashScreen is made when the query is more than 30 secs

--- a/app/src/main/res/layout/menu_perfil.xml
+++ b/app/src/main/res/layout/menu_perfil.xml
@@ -31,9 +31,9 @@
     <Button
         android:id="@+id/btnChangePrint"
         style="@style/ButtonCustomEnable"
-        android:text="Cambiar Impresora"
         android:layout_above="@+id/btnCerrarSession"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:text="Cambiar Impresora" />
 
     <Button
         android:id="@+id/btnCerrarSession"
