--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -36,6 +36,18 @@
             android:outAnimation="@android:anim/slide_out_right"
             tools:text="Cargando datos"/>
 
+        <Button
+            android:id="@+id/btnCancelSync"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorLightBlue"
+            android:paddingHorizontal="50dp"
+            android:text="Cancelar"
+            android:visibility="gone"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"/>
+
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
