--- a/app/src/main/res/layout/menu_inicio.xml
+++ b/app/src/main/res/layout/menu_inicio.xml
@@ -15,12 +15,12 @@
             android:layout_height="120dp"
             android:background="@drawable/bg_blue">
 
-                <ImageView
-                    android:id="@+id/ivLogo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/icon_action_tickets"
-                    android:layout_centerInParent="true"/>
+            <ImageView
+                android:id="@+id/ivLogo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@mipmap/icon_action_tickets" />
 
 
         </RelativeLayout>
