--- a/app/src/main/res/layout/activity_select_tarifa.xml
+++ b/app/src/main/res/layout/activity_select_tarifa.xml
@@ -1,94 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Menu.SelectTarifa"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@mipmap/background_blanco"
-    android:id="@+id/main_content">
+    android:orientation="vertical"
+    tools:context=".Menu.SelectTarifa">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".7"
+        android:background="@color/brandColor">
+
+        <ImageButton
+            android:id="@+id/imgBtnBack"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"
+            android:padding="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_keyboard_backspace"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <!--<ImageView
+            android:id="@+id/ivNameViewPager"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:layout_weight="8"
+            android:padding="20dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/header_busticket" />-->
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:gravity="center_horizontal"
+            android:src="@drawable/logotipo_busticket"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:id="@+id/contenedor"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="10"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:layout_weight=".7"
+        android:background="@drawable/bg_contenedor"
+        android:paddingHorizontal="16dp"
+        android:gravity="center"
+        android:weightSum="10">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.5"
-            android:weightSum="10">
+        <TextView
+            android:id="@+id/tvTxtDate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            tools:text="13-01-2022"
+            android:fontFamily="@font/font_main"
+            android:textColor="@color/md_text_white"
+            android:textSize="22sp">
 
-            <ImageButton
-                android:id="@+id/imgBtnBack"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_weight="2"
-                android:background="@android:color/transparent"
-                android:src="@mipmap/icon_back" />
+        </TextView>
 
-            <ImageView
-                android:id="@+id/ivNameViewPager"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:layout_weight="8"
-                android:padding="20dp"
-                android:src="@mipmap/header_busticket"
-                android:scaleType="centerCrop" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:weightSum="10"
-            android:background="@drawable/bg_contenedor">
-
-            <TextView
-                android:id="@+id/tvTxtDate"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="6"
-                android:fontFamily="@font/font_main"
-
-                android:textColor="@color/md_text_white"
-                android:textSize="24sp"
-                android:gravity="center">
-
-            </TextView>
-
-            <TextView
-                android:id="@+id/tvTxtHora"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:textColor="@color/md_text_white"
-                android:fontFamily="@font/font_main"
-                android:textSize="24sp"
-                android:gravity="center">
-
-            </TextView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="7.5">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_tarifas"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/activity_horizontal_margin"/>
-
-        </LinearLayout>
-
+        <TextClock
+            android:id="@+id/tvTxtHora"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:fontFamily="@font/font_main"
+            android:format12Hour="hh:mm:ss a"
+            tools:text="12:00 PM"
+            android:textAlignment="textEnd"
+            android:textColor="@color/md_text_white"
+            android:textSize="22sp" />
 
     </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvTarifas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            tools:itemCount="3"
+            tools:listitem="@layout/adapter_tarifa" />
+
+    </LinearLayout>
+
+
+</LinearLayout>
