--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#0959aa</color>
     <color name="colorAccent">#7b7b7b</color>
 
+    <color name="brandColor">#004ad6</color>
+
     <color name="colorBlue">#B30959aa</color>
     <color name="colorLightBlue">#BF0096ff</color>
     <color name="colorGray">#CC7b7b7b</color>
